// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="d-flex flex-column vh-100"
      >
        <nav
          class="bg-primary navbar navbar-expand navbar-dark fixed-top"
        >
          <div
            class="container-fluid"
          >
            <button
              class="d-flex my-auto px-2 btn btn-primary"
              style="font-size: 1.25rem;"
              title="Switch to dark mode"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"
                />
              </svg>
            </button>
            <span
              class="mx-auto navbar-brand"
            >
              QR Code Generator
            </span>
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                class="d-flex my-auto px-2 dropdown-toggle btn btn-primary"
                id="react-aria-:r0:"
                style="font-size: 1.25rem;"
                title="Change QR code type"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 16 16"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </nav>
        <div
          class="d-flex flex-column h-100 container"
        >
          <div
            class="h-100 row"
          >
            <div
              class="d-flex flex-column justify-content-center py-3 h-100 col-md-6"
            >
              <form
                aria-label="form"
                class=""
                novalidate=""
              >
                <div
                  class="mb-3 form-floating"
                >
                  <input
                    class="form-control"
                    name="firstName"
                    placeholder="First Name"
                    required=""
                    type="text"
                  />
                  <label>
                    First Name
                  </label>
                </div>
                <div
                  class="mb-3 form-floating"
                >
                  <input
                    class="form-control"
                    name="lastName"
                    placeholder="Last Name"
                    required=""
                    type="text"
                  />
                  <label>
                    Last Name
                  </label>
                </div>
                <div
                  class="mb-3 form-floating"
                >
                  <input
                    class="form-control"
                    name="email"
                    placeholder="Email"
                    required=""
                    type="email"
                  />
                  <label>
                    Email
                  </label>
                </div>
                <div
                  class="mb-3 form-floating"
                >
                  <input
                    class="form-control"
                    name="phone"
                    pattern="^(\\d{10}|\\(\\d{3}\\) \\d{3}-\\d{4})$"
                    placeholder="Phone"
                    required=""
                    type="tel"
                  />
                  <label>
                    Phone
                  </label>
                </div>
                <div
                  class="d-flex"
                >
                  <button
                    class="mx-auto btn btn-primary"
                    type="submit"
                  >
                    Generate
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="d-flex flex-column vh-100"
      >
        <nav
          class="bg-primary navbar navbar-expand navbar-dark fixed-top"
        >
          <div
            class="container-fluid"
          >
            <button
              class="d-flex my-auto px-2 btn btn-primary"
              style="font-size: 1.25rem;"
              title="Switch to dark mode"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"
                />
              </svg>
            </button>
            <span
              class="mx-auto navbar-brand"
            >
              QR Code Generator
            </span>
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                class="d-flex my-auto px-2 dropdown-toggle btn btn-primary"
                id="react-aria-:r1:"
                style="font-size: 1.25rem;"
                title="Change QR code type"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 16 16"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </nav>
        <div
          class="d-flex flex-column h-100 container"
        >
          <div
            class="h-100 row"
          >
            <div
              class="d-flex flex-column justify-content-center py-3 h-100 col-md-6"
            >
              <form
                aria-label="form"
                class=""
                novalidate=""
              >
                <div
                  class="mb-3 form-floating"
                >
                  <input
                    class="form-control"
                    name="firstName"
                    placeholder="First Name"
                    required=""
                    type="text"
                  />
                  <label>
                    First Name
                  </label>
                </div>
                <div
                  class="mb-3 form-floating"
                >
                  <input
                    class="form-control"
                    name="lastName"
                    placeholder="Last Name"
                    required=""
                    type="text"
                  />
                  <label>
                    Last Name
                  </label>
                </div>
                <div
                  class="mb-3 form-floating"
                >
                  <input
                    class="form-control"
                    name="email"
                    placeholder="Email"
                    required=""
                    type="email"
                  />
                  <label>
                    Email
                  </label>
                </div>
                <div
                  class="mb-3 form-floating"
                >
                  <input
                    class="form-control"
                    name="phone"
                    pattern="^(\\d{10}|\\(\\d{3}\\) \\d{3}-\\d{4})$"
                    placeholder="Phone"
                    required=""
                    type="tel"
                  />
                  <label>
                    Phone
                  </label>
                </div>
                <div
                  class="d-flex"
                >
                  <button
                    class="mx-auto btn btn-primary"
                    type="submit"
                  >
                    Generate
                  </button>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="d-flex flex-column vh-100"
    >
      <nav
        class="bg-primary navbar navbar-expand navbar-dark fixed-top"
      >
        <div
          class="container-fluid"
        >
          <button
            class="d-flex my-auto px-2 btn btn-primary"
            style="font-size: 1.25rem;"
            title="Switch to dark mode"
            type="button"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 16 16"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278"
              />
            </svg>
          </button>
          <span
            class="mx-auto navbar-brand"
          >
            QR Code Generator
          </span>
          <div
            class="dropdown"
          >
            <button
              aria-expanded="false"
              class="d-flex my-auto px-2 dropdown-toggle btn btn-primary"
              id="react-aria-:r1:"
              style="font-size: 1.25rem;"
              title="Change QR code type"
              type="button"
            >
              <svg
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 16 16"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
      </nav>
      <div
        class="d-flex flex-column h-100 container"
      >
        <div
          class="h-100 row"
        >
          <div
            class="d-flex flex-column justify-content-center py-3 h-100 col-md-6"
          >
            <form
              aria-label="form"
              class=""
              novalidate=""
            >
              <div
                class="mb-3 form-floating"
              >
                <input
                  class="form-control"
                  name="firstName"
                  placeholder="First Name"
                  required=""
                  type="text"
                />
                <label>
                  First Name
                </label>
              </div>
              <div
                class="mb-3 form-floating"
              >
                <input
                  class="form-control"
                  name="lastName"
                  placeholder="Last Name"
                  required=""
                  type="text"
                />
                <label>
                  Last Name
                </label>
              </div>
              <div
                class="mb-3 form-floating"
              >
                <input
                  class="form-control"
                  name="email"
                  placeholder="Email"
                  required=""
                  type="email"
                />
                <label>
                  Email
                </label>
              </div>
              <div
                class="mb-3 form-floating"
              >
                <input
                  class="form-control"
                  name="phone"
                  pattern="^(\\d{10}|\\(\\d{3}\\) \\d{3}-\\d{4})$"
                  placeholder="Phone"
                  required=""
                  type="tel"
                />
                <label>
                  Phone
                </label>
              </div>
              <div
                class="d-flex"
              >
                <button
                  class="mx-auto btn btn-primary"
                  type="submit"
                >
                  Generate
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App sends correct payload when qr with caption is downloaded 1`] = `
[MockFunction] {
  "calls": [
    [
      [
        Uint8Array [
          154,
          135,
          36,
          34,
          102,
          160,
          121,
          104,
          173,
          132,
          38,
          169,
          182,
          42,
          39,
        ],
      ],
      {
        "type": "image/png",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`App sends correct payload when qr with no caption is downloaded 1`] = `
[MockFunction] {
  "calls": [
    [
      [
        Uint8Array [
          154,
          135,
          36,
          34,
          102,
          160,
          121,
          104,
          173,
          132,
          218,
          2,
          106,
          155,
          98,
          162,
        ],
      ],
      {
        "type": "image/png",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
